--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@ function cube() {
 
 var num = document.getElementById("n1");
 
-num.value = Math.pow(num.value, 3);
+num.value = sin(num.value);
 
 }
 
@@ -24,7 +24,7 @@ Number:
 
 <input type="text" id="n1"><p>
 
-<button onclick="cube()"> x^3 </button>
+<button onclick="cube()"> sin(x) </button>
 
 </body>
 
